Partial replacement of deprecated URL constructors