@@ -21,6 +21,7 @@ import crawlercommons.robots.BaseRobotRules;
 import java.io.File;
 import java.net.InetAddress;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.UnknownHostException;
 import java.time.Instant;
@@ -515,7 +516,7 @@ public class FetcherBolt extends StatusEmitterBolt {
                 boolean asap = false;
 
                 try {
-                    URL url = new URL(fit.url);
+                    URL url = new URI(fit.url).toURL();
                     Protocol protocol = protocolFactory.getProtocol(url);
 
                     if (protocol == null)
