@@ -22,6 +22,7 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.util.List;
 import java.util.Map;
@@ -182,7 +183,7 @@ public class URLFilters extends URLFilter implements JSONResource {
                 for (URLFilter filter : filters.filters) {
                     long start = System.currentTimeMillis();
                     normalizedURL =
-                            filter.filter(new URL(sourceURL), new Metadata(), normalizedURL);
+                            filter.filter(new URI(sourceURL).toURL(), new Metadata(), normalizedURL);
                     long end = System.currentTimeMillis();
                     System.out.println(
                             "\t["
